# ict_x_claude

./: .env.example  .gitignore  README.md  ROADMAP.md  STRATEGY.md  arranque.md  pyproject.toml
configs/: default.yaml  lucid_propfirm.yaml  mes.yaml  mgc.yaml  mnq.yaml  nq.yaml
docs/: OPERATING.md  architecture.md  glossary.md
docs/concepts/: 00_index.md  01_swing_points.md  02_market_structure.md  03_displacement.md  04_fair_value_gap.md  05_order_block.md  06_breaker_block.md  07_mitigation_block.md  08_rejection_block.md  09_pd_array_hierarchy.md  10_liquidity.md  11_dealing_range_ote.md  12_power_of_three.md  13_sessions_killzones.md  14_unicorn_model.md  _template.md
docs/pilots/: 001_sensitivity_sweep.md  002_fixed_tp.md  003_wf_candidates.md  004_session_breakdown.md  005_session_mode_comparison.md  006_tf_sweep.md  007_es_compare.md  008_mgc_compare.md
docs/research/: ict_concepts_research.md
scripts/: analyze_today.py  fetch_localhost.py  pilot_003_wf_candidates.py  pilot_004_session_breakdown.py  pilot_005_mode_comparison.py  pilot_005b_tf_sweep.py  pilot_007_es_compare.py  pilot_008_gold_full.py  pilot_008_gold_smoke.py  pilot_009_mgc_sensitivity.py  pilot_fixed_tp.py  pilot_sensitivity_sweep.py  replay_l2.py  run_backtest.py  run_backtest_cme.py  run_backtest_l2.py  run_live.py  supervisor.py  walk_forward_cme.py
src/ict_bot/: __init__.py
src/ict_bot/backtest/: __init__.py  cli.py  engine.py  orders.py  portfolio.py  runner.py
src/ict_bot/config/: __init__.py  settings.py
src/ict_bot/data/: __init__.py  cache.py  models.py  resampler.py  validators.py
src/ict_bot/data/loaders/: __init__.py  cme_csv.py  l2_csv.py  ohlcv_http.py
src/ict_bot/execution/: __init__.py  broker.py  kill_switch.py  paper_broker.py  runner.py
src/ict_bot/execution/quantower/: __init__.py  broker.py  dom2_client.py  lucid_executor.py
src/ict_bot/ml/: __init__.py  features.py  filter_model.py
src/ict_bot/notifications/: __init__.py  shadow_logger.py  telegram.py  telegram_commander.py
src/ict_bot/reporting/: __init__.py  html_report.py  metrics.py  plots.py
src/ict_bot/risk/: __init__.py  limits.py  sizing.py
src/ict_bot/sessions/: __init__.py  killzones.py  midnight_open.py  sessions.py
src/ict_bot/signals/: __init__.py  base.py  selector.py
src/ict_bot/signals/blocks/: __init__.py  breaker.py  mitigation.py  order_block.py  rejection.py
src/ict_bot/structure/: __init__.py  displacement.py  market_structure.py  swings.py
src/ict_bot/utils/: __init__.py  logging.py  tz.py
src/ict_bot/validation/: __init__.py  bootstrap.py  sensitivity.py  walk_forward.py
tests/: conftest.py  test_smoke.py
tests/backtest/: test_engine.py  test_news_block_fix.py  test_quantower.py  test_risk.py  test_validation_and_exec.py
tests/data/: conftest.py  test_integration_data.py  test_models.py  test_resampler.py  test_tz.py  test_validators.py
tests/notifications/: test_shadow_logger.py  test_telegram.py
tests/sessions/: test_killzones.py
tests/signals/: test_blocks.py  test_fvg.py  test_liquidity.py  test_ranges_and_selector.py  test_setups.py
tests/structure/: conftest.py  test_displacement.py  test_market_structure.py  test_swings.py
(+19 files in other folders)
