[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ict_x_claude"
version = "0.1.0"
description = "ICT (Inner Circle Trader) algorithmic trading bot for NQ futures. Rule-based engine, L2-confirmed, backtested before production."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "dantndev" }]
keywords = ["ICT", "trading", "futures", "NQ", "backtest", "algorithmic"]

dependencies = [
    "polars>=1.0",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "pytz>=2024.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "rich>=13.7",
    "structlog>=24.1",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "joblib>=1.4",
]
viz = [
    "matplotlib>=3.8",
    "plotly>=5.20",
    "seaborn>=0.13",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "types-python-dateutil",
]

[project.scripts]
ict-backtest = "ict_bot.backtest.cli:main"
ict-fetch = "ict_bot.data.fetch_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# ───────────────────────────── Ruff ─────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "TID",              # tidy imports
    "PL",               # pylint
    "RUF",              # ruff-specific
    "N",                # pep8-naming
    "ANN",              # annotations (strictness)
]
ignore = [
    "PLR0913",  # too many args (common in detector signatures)
    "ANN101",   # missing self type
    "ANN102",   # missing cls type
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "PLR2004"]
"scripts/**" = ["ANN"]

# ───────────────────────────── MyPy ─────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
disallow_untyped_defs = false

# ───────────────────────────── PyTest ───────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=ict_bot",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
]
markers = [
    "slow: tests that take more than 1s",
    "integration: tests touching real data files or HTTP endpoints",
    "concept: tests pinning an ICT concept's mathematical definition",
]

[tool.coverage.run]
branch = true
source = ["src/ict_bot"]
